navbar 1px bottom overflow fixed

--- a/src/stylesheets/_navbar.scss
+++ b/src/stylesheets/_navbar.scss
@@ -132,7 +132,7 @@
       display: flex;
 
       a {
-        padding: 17px 10px 13px 10px;
+        padding: 16px 10px 13px 10px;
         .fa {
           font-size: 19px;
         }
